--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -43,6 +43,8 @@
   width: 100%;
   height: 100%;
   flex-direction: column;
+
+  --ps-month-calendar-item-background-color: lightgray;
 }
 
 .month-calendar-header-row {
@@ -128,6 +130,7 @@
   vertical-align: middle;
 }
 
+
 .month-calendar-item-block {
   display: inline-block;
   margin-right: 5px;
@@ -135,18 +138,7 @@
   color: white;
   white-space: nowrap;
   font-weight: bold;
-
-  .month-calendar-item-network--polkadot & {
-    background: #FF6482;
-  }
-
-  .month-calendar-item-network--kusama & {
-    background: #333;
-  }
-
-  .month-calendar-item-network--acala & {
-    background: #645aff;
-  }
+  background: var(--ps-month-calendar-item-background-color);
 }
 
 .month-calendar-item-time {
