--- a/src/app/pages/week/week.component.html
+++ b/src/app/pages/week/week.component.html
@@ -41,7 +41,7 @@
              [class.week-calendar-column--selected]="+column.date === +selectedDate"
              [class.week-calendar-column--today]="+column.date === +today">
           <div class="week-calendar-hour" *ngFor="let hourItems of (column.hoursWithItems | async)">
-            <div *ngFor="let item of hourItems" [attr.class]="'week-calendar-item week-calendar-item-network--' + item.network + ' week-calendar-item-type--' + item.type">
+            <div *ngFor="let item of hourItems" [attr.class]="'week-calendar-item week-calendar-item-network--' + item.network + ' week-calendar-item-type--' + item.type" [style.--ps-week-calendar-item-background-color]="chainColors[item.network]">
               <span class="week-calendar-item-time">{{ item.date | date: 'HH:mm' }}</span>
               <span class="week-calendar-item-block">{{ item.block }}</span>
               <span class="week-calendar-item-description">{{ item.description }}</span>
