Network Manager more UI elements start working

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -45,8 +45,8 @@
                       [dateClass]="dateClassFn" [startAt]="date | async"></mat-calendar>
       </mat-card>
       <div class="pages-legend">
-        <ng-container *ngFor="let network of networkConfig | keyvalue">
-          <div class="pages-legend-item pages-legend-item--{{network.key}}" [style.--ps-pages-legend-item-color]="network.value.config.color">{{network.value.config.name}}</div>
+        <ng-container *ngFor="let network of ns.activeNetworks | async">
+          <div class="pages-legend-item" [style.--ps-pages-legend-item-color]="network.config.color">{{network.config.name}}</div>
         </ng-container>
       </div>
     </div>
