--- a/src/app/components/network-manager/network-manager.component.html
+++ b/src/app/components/network-manager/network-manager.component.html
@@ -3,31 +3,33 @@
   <div class="network-manager">
     <div class="network-list">
       <button type="button" (click)="addCustomNetwork()">Add custom network</button>
-      <div *ngFor="let network of customNetworks | async" (click)="selectNetwork(network)">
-        {{network.config.name}}
-        <mat-checkbox *ngIf="networkActiveFormControls.get(network) as control" [formControl]="control"></mat-checkbox>
-        <button type="button" (click)="deleteCustomNetwork(network)">Delete</button>
-        <button type="button" (click)="selectNetwork(network)">Configure</button>
+      <div *ngFor="let network of networks | async" (click)="selectNetwork(network)">
+        <ng-container *ngIf="network.isCustom">
+          {{network.config.name}}
+          <mat-checkbox *ngIf="networkActiveFormControls.get(network) as control" [formControl]="control"></mat-checkbox>
+          <button type="button" (click)="deleteCustomNetwork(network)">Delete</button>
+          <button type="button" (click)="selectNetwork(network)">Configure</button>
+        </ng-container>
       </div>
       <div *ngFor="let network of networks | async" (click)="selectNetwork(network)">
-        {{network.config.name}}
-        <mat-checkbox *ngIf="networkActiveFormControls.get(network) as control" [formControl]="control"></mat-checkbox>
-        <button type="button">Configure</button>
+        <ng-container *ngIf="!network.isCustom">
+          {{network.config.name}}
+          <mat-checkbox *ngIf="networkActiveFormControls.get(network) as control" [formControl]="control"></mat-checkbox>
+          <button type="button">Configure</button>
+        </ng-container>
       </div>
     </div>
     <div class="network-properties" *ngIf="selectedNetwork | async as selectedNetwork">
       <h3>{{selectedNetwork.config.name}}</h3>
       <form [formGroup]="networkForm">
-        <ng-container *ngIf="customNetworks | async as customNetworks">
-          <mat-form-field *ngIf="customNetworks.includes(selectedNetwork)" appearance="fill">
-            <mat-label>Custom network name</mat-label>
-            <input type="text"
-                   placeholder="Enter name"
-                   aria-label="name"
-                   matInput
-                   formControlName="name">
-          </mat-form-field>
-        </ng-container>
+        <mat-form-field *ngIf="selectedNetwork.isCustom" appearance="fill">
+          <mat-label>Custom network name</mat-label>
+          <input type="text"
+                 placeholder="Enter name"
+                 aria-label="name"
+                 matInput
+                 formControlName="name">
+        </mat-form-field>
         <mat-checkbox formControlName="active">Show this network in the calendar</mat-checkbox>
         <mat-form-field appearance="fill">
           <mat-label>Provider URL</mat-label>
@@ -37,13 +39,14 @@
                  matInput
                  formControlName="url"
                  [matAutocomplete]="urlOptionsAuto">
-          <mat-autocomplete #urlOptionsAuto="matAutocomplete" (optionSelected)="selectUrl()">
+          <mat-autocomplete #urlOptionsAuto="matAutocomplete" (optionSelected)="connectSelectedNetwork()">
             <mat-option *ngFor="let option of selectedNetwork.urls|async" [value]="option">
               {{option}}
             </mat-option>
           </mat-autocomplete>
           <span class="mat-select-arrow" style="position: absolute; right: 0; top: 10px;"></span>
         </mat-form-field>
+        <button type="button" (click)="connectSelectedNetwork()">Connect</button>
         <ng-container [ngSwitch]="selectedNetwork.registered|async">
           <ng-container *ngSwitchCase="true">
             <ng-container [ngSwitch]="selectedNetwork.connected|async">
@@ -52,7 +55,7 @@
             </ng-container>
           </ng-container>
           <ng-container *ngSwitchCase="false">
-            <span>(error)</span>
+            <span>(not connected)</span>
           </ng-container>
         </ng-container>
       </form>
