--- a/src/app/components/network-manager/network-manager.component.scss
+++ b/src/app/components/network-manager/network-manager.component.scss
@@ -9,4 +9,24 @@
 }
 .network-properties {
   flex: 1 1 auto;
+  position: relative;
+  padding-left: 2em;
+}
+
+.network-properties-chain {
+  position: sticky;
+  top: 0;
+}
+
+.network-properties-chain-name {
+  font-size: 1.3em;
+}
+
+.network-properties-chain-state,
+.network-properties-activate-box {
+  margin-bottom: 1em;
+}
+
+.network-list-item {
+  margin: 0.3em 0;
 }
