added logo to month view

--- a/src/app/pages/day/day.component.scss
+++ b/src/app/pages/day/day.component.scss
@@ -149,11 +149,8 @@
   white-space: nowrap;
 }
 
-.day-calendar-item-logo {
-}
-
 .day-calendar-item-logo img {
-  height: 1.8em;
-  width: 1.8em;
+  height: 28px;
+  width: 28px;
   margin-right: 0.2em;
 }
