--- a/src/app/pages/month/month.component.html
+++ b/src/app/pages/month/month.component.html
@@ -17,8 +17,8 @@
         <div class="month-calendar-header-column">Saturday</div>
         <div class="month-calendar-header-column">Sunday</div>
       </div>
-      <div class="month-calendar-row" *ngFor="let row of (columnsPerRow | async)">
-        <div class="month-calendar-column" *ngFor="let column of row"
+      <div class="month-calendar-row" *ngFor="let row of (columnsPerRow | async); trackBy: trackByIndex">
+        <div class="month-calendar-column" *ngFor="let column of row; trackBy: trackByIndex"
              [class]="'month-calendar-' + (column.date | date : 'yyyy-MM-dd')"
              [class.month-calendar-column--previous-month]="column.inPrevMonth"
              [class.month-calendar-column--next-month]="column.inNextMonth"
@@ -33,10 +33,11 @@
               {{ column.date | date : 'd'}}{{ column.isFirstDayOfYear ? (column.date | date : ', yyyy') : '' }}
             </button>
           </div>
-          <ng-container *ngFor="let hourItems of (column.hoursWithItems | async)">
-            <div tabindex="0" *ngFor="let item of hourItems"
+          <ng-container *ngFor="let hourItems of (column.hoursWithItems | async); trackBy: trackByIndex">
+            <div tabindex="0" *ngFor="let item of hourItems; trackBy: trackByIndex"
                  [class]="'month-calendar-item month-calendar-item-type--' + item.type + ' month-calendar-item-network--' + item.network" [style.--ps-month-calendar-item-background-color]="chainColors[item.network]">
               <span class="month-calendar-item-time">{{ item.date | date : 'HH:mm' }}</span>
+              <span class="month-calendar-item-logo" *ngIf="item.networkLogo"><img [src]="item.networkLogo"></span>
               <span class="month-calendar-item-block">{{ item.block }}</span>
               <span class="month-calendar-item-description">{{ item.description }}</span>
             </div>
