--- a/src/app/components/network-manager/network-manager.component.scss
+++ b/src/app/components/network-manager/network-manager.component.scss
@@ -7,6 +7,40 @@
 .network-list {
   flex: 0 1 auto;
 }
+
+.network-list-item {
+  display: flex;
+  padding: 3px 0 3px 8px;
+  flex-flow: row nowrap;
+  align-items: center;
+  cursor: pointer;
+
+  &:hover {
+    background: #eee;
+  }
+
+  > * {
+    flex: 0 0 auto;
+  }
+
+  .network-list-item-label {
+    flex: 1 1 auto;
+  }
+}
+
+.network-list-item--selected {
+  background: #444;
+  color: #fff;
+
+  &:hover {
+    background: #777;
+  }
+}
+
+.network-list-item-checkbox {
+  margin-right: 8px;
+}
+
 .network-properties {
   flex: 1 1 auto;
   position: relative;
@@ -27,6 +61,6 @@
   margin-bottom: 1em;
 }
 
-.network-list-item {
-  margin: 0.3em 0;
+.network-properties-provider mat-form-field {
+  width: 400px;
 }
