Some code optimizations. Show first 2 letters of custom network instead of network logo.

--- a/src/app/pages/month/month.component.scss
+++ b/src/app/pages/month/month.component.scss
@@ -44,7 +44,7 @@
   height: 100%;
   flex-direction: column;
 
-  --ps-month-calendar-item-background-color: lightgray;
+  --ps-month-calendar-item-background-color: var(--ps-pages-legend-item-color);
 }
 
 .month-calendar-header-row {
