--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,7 @@
   --ps-badge-good-color: #008000;
   --ps-badge-bad-color: #8b0000;
   --ps-text-error-color: #8b0000;
+  --ps-pages-legend-item-color: #000;
 }
 
 html, body {
