--- a/src/app/pages/day/day.component.html
+++ b/src/app/pages/day/day.component.html
@@ -37,11 +37,14 @@
         <div *ngIf="hourItems.length === 0" class="day-calendar-row-empty-item"></div>
 
         <div *ngFor="let item of hourItems; trackBy: trackByHourItems"
-             [attr.class]="'day-calendar-item day-calendar-item-network--' + item.network + ' day-calendar-item-type--' + item.type"
-             [style.--ps-day-calendar-item-background-color]="chainColors[item.network]"
-             [title]="item.networkName">
+             [attr.class]="'day-calendar-item day-calendar-item-network--' + item.network.name + ' day-calendar-item-type--' + item.type"
+             [style.--ps-day-calendar-item-background-color]="chainColors[item.network.name]"
+             [title]="item.network.config.name">
           <span class="day-calendar-item-time">{{ item.date | date: 'HH:mm' }}</span>
-          <span class="day-calendar-item-logo" *ngIf="item.networkLogo"><img [src]="item.networkLogo"></span>
+          <span class="day-calendar-item-logo">
+            <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
+            <ng-container *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</ng-container>
+          </span>
           <span class="day-calendar-item-block">{{ item.block }}</span>
           <span class="day-calendar-item-description">{{ item.description }}</span>
         </div>
