--- a/src/app/pages/month/month.component.html
+++ b/src/app/pages/month/month.component.html
@@ -35,10 +35,13 @@
           </div>
           <ng-container *ngFor="let hourItems of (column.hoursWithItems | async); trackBy: trackByIndex">
             <div tabindex="0" *ngFor="let item of hourItems; trackBy: trackByIndex"
-                 [class]="'month-calendar-item month-calendar-item-type--' + item.type + ' month-calendar-item-network--' + item.network"
-                 [style.--ps-month-calendar-item-background-color]="chainColors[item.network]">
+                 [class]="'month-calendar-item month-calendar-item-type--' + item.type + ' month-calendar-item-network--' + item.network.name"
+                 [style.--ps-month-calendar-item-background-color]="chainColors[item.network.name]">
               <span class="month-calendar-item-time">{{ item.date | date : 'HH:mm' }}</span>
-              <span class="month-calendar-item-logo" *ngIf="item.networkLogo"><img [src]="item.networkLogo"></span>
+              <span class="month-calendar-item-logo">
+                <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
+                <ng-container *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</ng-container>
+              </span>
               <span class="month-calendar-item-block">{{ item.block }}</span>
               <span class="month-calendar-item-description">{{ item.description }}</span>
             </div>
