Moved Network Manager buttons.

--- a/src/app/components/network-manager/network-manager.component.html
+++ b/src/app/components/network-manager/network-manager.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
   <div class="network-manager">
     <div class="network-list">
-      <button mat-button (click)="addCustomNetwork()">
+      <button mat-stroked-button color="accent" class="add-network" (click)="addCustomNetwork()">
         <mat-icon aria-hidden="false" aria-label="Add custom network">add</mat-icon>
         Add custom network
       </button>
