--- a/src/app/components/network-manager/network-manager.component.scss
+++ b/src/app/components/network-manager/network-manager.component.scss
@@ -8,6 +8,10 @@
   flex: 0 1 auto;
 }
 
+.add-network {
+  margin-bottom: 8px;
+}
+
 .network-list-item {
   display: flex;
   padding: 3px 0 3px 8px;
