--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -28,9 +28,6 @@
     <button mat-flat-button (click)="selectView('day')" class="pages-view-button">
       Day
     </button>
-    <button mat-flat-button (click)="openChainManager()" class="pages-view-button">
-      Networks
-    </button>
     <a class="pages-github-link" href="https://github.com/polkascan/calendar-ui" target="_blank">
       <svg class="pages-github-logo" width="32" height="32" aria-hidden="true" viewBox="0 0 16 16"
            data-view-component="true">
@@ -47,6 +44,10 @@
                       [dateClass]="dateClassFn" [startAt]="date | async"></mat-calendar>
       </mat-card>
       <div class="pages-legend">
+        <button mat-stroked-button class="open-network-manager" (click)="openNetworkManager()">
+          <mat-icon aria-hidden="false" aria-label="Manage networks">settings</mat-icon>
+          Networks
+        </button>
         <ng-container *ngFor="let network of ns.activeNetworks | async">
           <div class="pages-legend-item"
                [style.--ps-pages-legend-item-color]="network.config.color"
