--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -50,7 +50,8 @@
         <ng-container *ngFor="let network of ns.activeNetworks | async">
           <div class="pages-legend-item"
                [style.--ps-pages-legend-item-color]="network.config.color"
-               [class.pages-legend-item--loading]="(network.initializing | async) || (network.loading | async)">{{network.config.name}}</div>
+               [class.pages-legend-item--loading]="(network.initializing | async) || (network.loading | async)"
+               [class.pages-legend-item--failed]="(network.failed | async)">{{network.config.name}}</div>
         </ng-container>
       </div>
     </div>
