--- a/src/app/pages/day/day.component.html
+++ b/src/app/pages/day/day.component.html
@@ -43,7 +43,7 @@
           <span class="day-calendar-item-time">{{ item.date | date: 'HH:mm' }}</span>
           <span class="day-calendar-item-logo">
             <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
-            <ng-container *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</ng-container>
+            <span class="day-calendar-item-logo-custom" *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</span>
           </span>
           <span class="day-calendar-item-block">{{ item.block }}</span>
           <span class="day-calendar-item-description">{{ item.description }}</span>
