--- a/src/app/pages/month/month.component.html
+++ b/src/app/pages/month/month.component.html
@@ -40,7 +40,7 @@
               <span class="month-calendar-item-time">{{ item.date | date : 'HH:mm' }}</span>
               <span class="month-calendar-item-logo">
                 <img *ngIf="item.network.config.logo" [src]="item.network.config.logo" alt="Logo">
-                <ng-container *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</ng-container>
+                <span class="month-calendar-item-logo-custom" *ngIf="!item.network.config.logo">{{ item.network.config.name.substring(0, 2) }}</span>
               </span>
               <span class="month-calendar-item-block">{{ item.block }}</span>
               <span class="month-calendar-item-description">{{ item.description }}</span>
