--- a/src/app/pages/week/week.component.scss
+++ b/src/app/pages/week/week.component.scss
@@ -162,5 +162,14 @@
 .week-calendar-item-logo img {
   height: 20px;
   width: 20px;
-  margin-right: 0.2em;
+  margin-right: 5px;
+}
+
+.week-calendar-item-logo-custom {
+  display: inline-block;
+  height: 20px;
+  min-width: 20px;
+  margin-right: 5px;
+  border: solid 1px lightgray;
+  text-align: center;
 }
